--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - .:/api
     ports:
       - "80:3000"
-    env_file:
-     - .env
+    environment:
+     - DATABASE_URL=postgres://postgres@postgres:5432/trabalho_restful_development
 
   postgres:
       image: postgres:12-alpine
